@@ -1,4 +1,10 @@
 ------------------------------------------------------------------------
+rev 24:  (no author) | 2003-08-13 23:57:56 -0700 (Wed, 13 Aug 2003) | 3 lines
+
+Added much needed documentation on predefined Inline States...oops.
+
+
+------------------------------------------------------------------------
 rev 23:  (no author) | 2003-08-13 22:57:12 -0700 (Wed, 13 Aug 2003) | 2 lines
 
 Bumped up Revision number...forgot to do that in the last commit :-/
